distros/U/URI-Router/clib/src/panda/uri/router/RegexpParse.cc

#line 1 "src/panda/uri/router/RegexpParse.rl"
#include "Regexp.h"
#include <limits.h>
#include <panda/from_chars.h>

namespace panda { namespace uri { namespace router {


#line 11 "src/panda/uri/router/RegexpParse.cc"
static const int regexp_parser_start = 35;
static const int regexp_parser_first_final = 35;
static const int regexp_parser_error = 0;

static const int regexp_parser_en_group_regexp = 12;
static const int regexp_parser_en_main = 35;


#line 116 "src/panda/uri/router/RegexpParse.rl"


static void assign_literal (string& dst, const char* p, const char* pe) {
    while (p < pe) {
        if (*p == '\\') {
            ++p;
            assert(p < pe);
        }
        dst += *p++;
    }
}

static void maybe_join (std::vector<Regexp::Element>& v) {
    if (v.size() < 2) return;
    auto& e1 = v[v.size()-2];
    auto& e2 = v[v.size()-1];
    if (e1.token.type != Regexp::Token::Type::Literal || e1.token.type != e2.token.type) return;
    if (!e1.quant.is_default() || !e2.quant.is_default()) return;
    e1.token.literal += e2.token.literal;
    v.pop_back();
}

static bool symclass_from_escaped (char c, Regexp::Symclass& s) {
    switch (c) {
        case 'd':
            s.ranges.push_back({'0', '9'});
            return true;
        case 'D':
            s.ranges.push_back({CHAR_MIN, '0' - 1});
            s.ranges.push_back({'9' + 1, CHAR_MAX});
            return true;
        case 'w':
            s.ranges.push_back({'a', 'z'});
            s.ranges.push_back({'A', 'Z'});
            s.ranges.push_back({'0', '9'});
            s.chars += '_';
            return true;
        case 'W':
            s.ranges.push_back({CHAR_MIN, '0' - 1});
            s.ranges.push_back({'9' + 1, 'A' - 1});
            s.ranges.push_back({'Z' + 1, '_' - 1});
            s.ranges.push_back({'_' + 1, 'a' - 1});
            s.ranges.push_back({'z' + 1, CHAR_MAX});
            return true;
        case 't':
            s.chars += "\t\v";
            return true;
        case 'n':
            s.chars += "\n";
            return true;
        case 'r':
            s.chars += "\r";
            return true;
        case 's':
            s.chars += " \n\r\t\v";
            return true;
        case 'S':
            s.ranges.push_back({CHAR_MIN, '\t' - 1});
            s.ranges.push_back({'\n' + 1, '\r' - 1});
            s.ranges.push_back({'\r' + 1, ' ' - 1});
            s.ranges.push_back({' ' + 1, '\v' - 1});
            s.ranges.push_back({'\v' + 1, CHAR_MAX});
            return true;
    }
    return false;
}

static void parse_symclass (string_view str, Regexp::Symclass& s) {
    auto p = str.data();
    auto pe = p + str.length();
    
    if (p != pe && *p == '^') {
        s.inverse = true;
        ++p;
    }

    if (p == pe) throw std::logic_error("empty symclass");

    bool has_char_after_range = false;
    while (p < pe) {
        if (*p == '-' && has_char_after_range && (p+1) < pe) {
            s.ranges.push_back({s.chars.back(), *++p});
            s.chars.pop_back();
            has_char_after_range = false;
        } else if (*p == '\\') {
            ++p;
            assert(p < pe);
            if (!symclass_from_escaped(*p, s)) {
                s.chars.push_back(*p);
                has_char_after_range = true;
            }
        } else {
            s.chars.push_back(*p);
            has_char_after_range = true;
        }
        ++p;
    }
}

RegexpPtr Regexp::parse (string_view str) {
    const char* ps  = str.data();
    const char* p   = ps;
    const char* pe  = p + str.length();
    const char* eof = pe;
    int         cs  = regexp_parser_start;
    int         top = 0;
    std::vector<int> stack;
    stack.resize(8);

    const char* mark = nullptr;
    int num[2];

    auto ret = std::make_unique<Regexp>();

    struct Data {
        Regexp*             re;
        Regexp::Expression* expression = nullptr;
        Regexp::Element*    element    = nullptr;
    };

    std::vector<Data> data_stack = {{ret.get()}};
    auto data = &data_stack.back();
    
    auto nsave = [&](int& dest) {
        auto res = from_chars(mark, p, dest);
        assert(!res.ec);
    };
    
    
#line 150 "src/panda/uri/router/RegexpParse.cc"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 0: goto st0;
		case 38: goto st38;
		case 39: goto st39;
		case 40: goto st40;
		case 1: goto st1;
		case 2: goto st2;
		case 3: goto st3;
		case 4: goto st4;
		case 41: goto st41;
		case 42: goto st42;
		case 5: goto st5;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 43: goto st43;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 44: goto st44;
		case 45: goto st45;
		case 46: goto st46;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 47: goto st47;
		case 15: goto st15;
		case 16: goto st16;
		case 17: goto st17;
		case 18: goto st18;
		case 19: goto st19;
		case 20: goto st20;
		case 21: goto st21;
		case 22: goto st22;
		case 23: goto st23;
		case 24: goto st24;
		case 25: goto st25;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 34: goto st34;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 40: goto tr9;
		case 46: goto tr10;
		case 63: goto st0;
		case 91: goto tr11;
		case 92: goto tr12;
		case 93: goto st0;
	}
	if ( (*p) > 43 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else if ( (*p) >= 41 )
		goto st0;
	goto tr8;
tr8:
#line 14 "src/panda/uri/router/RegexpParse.rl"
	{
        data->re->expressions.push_back({});
        data->expression = &data->re->expressions.back();
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr143:
#line 33 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Literal;
        assign_literal(data->element->token.literal, mark, p);
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr153:
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr163:
#line 90 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 0; num[1] = -1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr169:
#line 43 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Symclass;
        switch (*(p-1)) {
            case '.':
                data->element->token.symclass.ranges.push_back({CHAR_MIN, CHAR_MAX});
                break;
        }
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr179:
#line 91 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 1; num[1] = -1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr185:
#line 52 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Symclass;
        auto is_special = symclass_from_escaped(*(p-1), data->element->token.symclass);
        assert(is_special);
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr195:
#line 89 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 0; num[1] = 1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr201:
#line 95 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 0; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr207:
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr213:
#line 96 "src/panda/uri/router/RegexpParse.rl"
	{ num[1] = -1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
tr219:
#line 94 "src/panda/uri/router/RegexpParse.rl"
	{ num[1] = num[0]; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 10 "src/panda/uri/router/RegexpParse.rl"
	{
        mark = p;
    }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 495 "src/panda/uri/router/RegexpParse.cc"
	switch( (*p) ) {
		case 40: goto tr144;
		case 41: goto st0;
		case 42: goto tr145;
		case 43: goto tr146;
		case 46: goto tr147;
		case 63: goto tr148;
		case 91: goto tr149;
		case 92: goto tr150;
		case 93: goto st0;
		case 123: goto tr151;
		case 124: goto tr152;
		case 125: goto st0;
	}
	goto tr143;
tr5:
#line 38 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Symclass;
        parse_symclass(string_view(mark, p - mark), data->element->token.symclass);
    }
	goto st37;
tr9:
#line 14 "src/panda/uri/router/RegexpParse.rl"
	{
        data->re->expressions.push_back({});
        data->expression = &data->re->expressions.back();
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr144:
#line 33 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Literal;
        assign_literal(data->element->token.literal, mark, p);
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr154:
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr164:
#line 90 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 0; num[1] = -1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr170:
#line 43 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Symclass;
        switch (*(p-1)) {
            case '.':
                data->element->token.symclass.ranges.push_back({CHAR_MIN, CHAR_MAX});
                break;
        }
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr180:
#line 91 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 1; num[1] = -1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr186:
#line 52 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->token.type = Regexp::Token::Type::Symclass;
        auto is_special = symclass_from_escaped(*(p-1), data->element->token.symclass);
        assert(is_special);
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr196:
#line 89 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 0; num[1] = 1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr202:
#line 95 "src/panda/uri/router/RegexpParse.rl"
	{ num[0] = 0; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr208:
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr214:
#line 96 "src/panda/uri/router/RegexpParse.rl"
	{ num[1] = -1; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
tr220:
#line 94 "src/panda/uri/router/RegexpParse.rl"
	{ num[1] = num[0]; }
#line 78 "src/panda/uri/router/RegexpParse.rl"
	{
        data->element->quant.min = num[0];
        data->element->quant.max = num[1];
    }
#line 28 "src/panda/uri/router/RegexpParse.rl"
	{
        maybe_join(data->expression->elements);
        data->element = nullptr;
    }
#line 23 "src/panda/uri/router/RegexpParse.rl"
	{
        data->expression->elements.push_back({});
        data->element = &data->expression->elements.back();
    }
#line 58 "src/panda/uri/router/RegexpParse.rl"
	{
        if (p < pe-2 && p[1] == '?' && p[2] == ':') { 
            data->element->token.type = Regexp::Token::Type::Group;
            p += 2;
        } else {
            data->element->token.type = Regexp::Token::Type::Capture;
        }
        data->element->token.regexp = std::make_unique<Regexp>();
        data_stack.push_back({data->element->token.regexp.get()});
        data = &data_stack.back();
        stack.resize(top+2);
        {stack[top++] = 37;goto st12;}
    }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 901 "src/panda/uri/router/RegexpParse.cc"
